--- a/index.html
+++ b/index.html
@@ -488,6 +488,26 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <label class="footer-form_text" for="footer-email">Subscribe</label>
+          <div class="footer-email">
+            <input
+              class="footer-date"
+              type="email"
+              name="footer-email"
+              id="footer-email"
+              placeholder="E-mail"
+            />
+            <button class="btn-subscribe" type="submit">
+              Subscribe
+              <svg class="btn-subscribe_icon" width="24" height="24">
+                <use
+                  href="./images/icons.svg/symbol-defsnew.svg#icon-subscribe"
+                ></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -497,6 +517,60 @@
             <use href="./images/icons.svg/symbol-defsnew.svg#icon-close"></use>
           </svg>
         </button>
+        <form action="" class="modal-form">
+          <h2 class="wrap-header">
+            Leave your contacts and we will call you back
+          </h2>
+          <div class="wrap-form">
+            <label for="name"> <span class="wrap-label">Name</span></label>
+            <span class="wrap-icon">
+              <input class="wrap-input" type="text" name="name" />
+              <svg class="wrap-input--icon" width="18" height="18">
+                <use
+                  href="./images/icons.svg/symbol-defsnew.svg#icon-name"
+                ></use>
+              </svg>
+            </span>
+          </div>
+          <div class="wrap-form">
+            <label for="phone"> <span class="wrap-label">Phone</span></label>
+            <span class="wrap-icon">
+              <input class="wrap-input" type="tel" name="phone" />
+              <svg class="wrap-input--icon" width="18" height="18">
+                <use
+                  href="./images/icons.svg/symbol-defsnew.svg#icon-phone"
+                ></use>
+              </svg>
+            </span>
+          </div>
+          <div class="wrap-form">
+            <label for="mail"><span class="wrap-label">Email</span></label>
+            <span class="wrap-icon">
+              <input class="wrap-input" type="email" name="mail" />
+              <svg class="wrap-input--icon" width="18" height="18">
+                <use
+                  href="./images/icons.svg/symbol-defsnew.svg#icon-email"
+                ></use>
+              </svg>
+            </span>
+          </div>
+          <div class="wrap-textarea">
+            <label for="comment"><span class="wrap-label">Comment</span></label>
+            <textarea
+              class="wrap-comment"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <label class="wrap-checkbox"
+            ><input type="checkbox" name="policy" id="" />
+            <span class="wrap-label"
+              >I accept the terms and conditions of the
+              <a class="wrap-label--link" href="">Privacy Policy</a>
+            </span>
+          </label>
+          <button class="btn-send" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
