--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           </ul>
         </div>
         <form class="footer-form">
-          <label class="footer-form_text" for="footer-email">Subscribe</label>
+          <label class="footer-form-text" for="footer-email">Subscribe</label>
           <div class="footer-email">
             <input
               class="footer-date"
@@ -499,12 +499,14 @@
               placeholder="E-mail"
             />
             <button class="btn-subscribe" type="submit">
-              Subscribe
-              <svg class="btn-subscribe_icon" width="24" height="24">
-                <use
-                  href="./images/icons.svg/symbol-defsnew.svg#icon-subscribe"
-                ></use>
-              </svg>
+              <span class="subscribe-text">
+                Subscribe
+                <svg class="btn-subscribe_icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/symbol-defsnew.svg#icon-subscribe"
+                  ></use>
+                </svg>
+              </span>
             </button>
           </div>
         </form>
