--- a/index.html
+++ b/index.html
@@ -524,7 +524,9 @@
             Leave your contacts and we will call you back
           </h2>
           <div class="wrap-form">
-            <label for="name"> <span class="wrap-label">Name</span></label>
+            <label class="main-info" for="name">
+              <span class="wrap-label">Name</span></label
+            >
             <span class="wrap-icon">
               <input class="wrap-input" type="text" name="name" />
               <svg class="wrap-input--icon" width="18" height="18">
@@ -535,7 +537,9 @@
             </span>
           </div>
           <div class="wrap-form">
-            <label for="phone"> <span class="wrap-label">Phone</span></label>
+            <label class="main-info" for="phone">
+              <span class="wrap-label">Phone</span></label
+            >
             <span class="wrap-icon">
               <input class="wrap-input" type="tel" name="phone" />
               <svg class="wrap-input--icon" width="18" height="18">
@@ -546,7 +550,9 @@
             </span>
           </div>
           <div class="wrap-form">
-            <label for="mail"><span class="wrap-label">Email</span></label>
+            <label class="main-info" for="mail"
+              ><span class="wrap-label">Email</span></label
+            >
             <span class="wrap-icon">
               <input class="wrap-input" type="email" name="mail" />
               <svg class="wrap-input--icon" width="18" height="18">
@@ -557,7 +563,9 @@
             </span>
           </div>
           <div class="wrap-textarea">
-            <label for="comment"><span class="wrap-label">Comment</span></label>
+            <label class="main-info" for="comment"
+              ><span class="wrap-label">Comment</span></label
+            >
             <textarea
               class="wrap-comment"
               name="comment"
